styles/style.css
:root {
  --BolDH-Black-Black: #131313;
  --BolDH-Black-Dark1: #212121;
  --BolDH-Black-Dark2: #252525;
  --BolDH-Black-Dark3: #272727;
  --BolDH-White-White: #F2F2F2;
  --BolDH-White-Pure: #FFFFFF;
  --BolDH-Accent-1: #32C3A0;
  --BolDH-Accent-2: #DD5423;
  --BolDH-Text-Grey: rgba(242, 242, 242, 0.76);
}

html {
  font-size: 16px;
}

html * {
  box-sizing: border-box;
  scroll-behavior: smooth;
}

h1, h2, h3, h4, .subtitle, p, a {
  margin: 0;
  padding: 0;
}

body {
  width: 100%;
  margin: 0;
  padding: 0;
  background-color: var(--BolDH-Black-Black, #131313);
}

/* ------------- COOKIES ------------- */
.chefcookie__box h1, .chefcookie__button {
  text-transform: lowercase!important;
  font-family: SequelMedium;
}

.chefcookie__box {
  padding-top: 4rem !important;
  }

.chefcookie__box h1 {
  margin-bottom: 0.75rem;
}

.chefcookie__box h1::first-letter, .chefcookie__button::first-letter {
  text-transform: capitalize!important;
}

.chefcookie__message p {
  font-family: SequelLight, sans-serif;
  font-size: 1rem;
  line-height: 150%; /* 1.875rem */
  letter-spacing: 0.05rem;
  color: var(--BolDH-Black-Dark3, #272727);
}

.chefcookie__button {
  font-size: 1rem;
  border: solid 2px var(--BolDH-Black-Dark3, #272727) !important;
  border-radius: 0.5rem !important;
}

/* -------------- GENERAL TYPOGRAPHY ------------------ */
h2 {
  /* BolDH/H2 */
  font-family: SequelMedium !important;
  font-size: 6rem;
  line-height: 110%; /* 6.6rem */
  color: var(--BolDH-White-White, #F2F2F2);
}

h3 {
  /* BolDH/H3 */
  font-family: SequelSemiBold, sans-serif;
  font-size: 3rem;
  line-height: 110%; /* 3.3rem */
  color: var(--BolDH-White-White, #F2F2F2);
}

h4 {
  font-family: SequelMedium, sans-serif;
  font-size: 1.75rem;
  line-height: 125%;
  letter-spacing: 0.05rem;
  color: var(--BolDH-White-White, #F2F2F2);
}

.subtitle {
  /* BolDH/Subtitle */
  font-family: SequelSemiBold, sans-serif;
  font-size: 1.5rem;
  line-height: 120%; /* 1.8rem */
  letter-spacing: 0.075rem;
}

.dark-sbt {
  color: var(--BolDH-Accent-1, #32C3A0);
}

p, ul, ol {
  /* BolDH/Body */
  font-family: SequelLight, sans-serif;
  font-size: 1.25rem;
  line-height: 150%; /* 1.875rem */
  letter-spacing: 0.05rem;
  color: var(--BolDH-Text-Grey, rgba(242, 242, 242, 0.76));
}

#main-credits p {
  /* BolDH/Body */
  font-family: SequelLight, sans-serif;
  font-size: 2.5rem;
  line-height: 100%; /* 1.875rem */
  letter-spacing: 0.05rem;
  color: var(--BolDH-White-White, #F2F2F2);
}

.keyword {
  font-family: SequelMedium;
  color: var(--BolDH-White-White, #F2F2F2);
}

/* ------------ BUTTONS AND LINKS ------------ */
.boldh-a-inline {
  color: var(--BolDH-White-White, #F2F2F2);
  text-decoration: none;
  font-family: SequelMedium;
  position: relative;
}

.boldh-a-inline:before {
  position: absolute;
  content: "";
  width: 100%;
  border-bottom: 2px solid var(--BolDH-Accent-1, #32C3A0);
  bottom: -0.2rem;
  transform-origin: left;
  transform: scaleX(1);
  transition: transform .2s ease-in;
}

.boldh-btn {
  /* BolDH/Buttons */
  font-family: SequelBold;
  font-size: 1rem;
  line-height: 150%; /* 1.5rem */
  letter-spacing: 0.05rem;
  display: flex;
  height: fit-content;
  padding: 0.75rem 2rem;
  justify-content: space-between;
  align-items: center;
  border-radius: 0.5rem;
  text-decoration: none;
  transition: all ease-in .2s;
  text-decoration: none;
}

.secondary-btn {
  width: fit-content;
  border: 2px solid var(--BolDH-Accent-1, #32C3A0);
  color: var(--BolDH-White-White, #F2F2F2);
  transition: all ease-in .2s;
}

.dark-btn {
  min-width: 25rem;
  border: 2px solid var(--BolDH-Accent-1, #32C3A0);
  color: var(--BolDH-White-White, #F2F2F2);
  transition: all ease-in .2s;
}

.light-btn {
  border: 2px solid var(--BolDH-Black-Dark3, #272727);
  color: var(--BolDH-Black-Dark3, #272727);
  align-self: stretch;
  transition: all ease-in .2s;
}

.light-btn svg path {
  stroke: var(--BolDH-Black-Dark3, #272727);
  transition: all ease-in .2s;
}

.hero-btn {
  display: flex;
  min-width: 30rem;
  width: fit-content;
  height: fit-content;
  padding: 0.75rem 2rem;
  justify-content: space-between;
  align-items: center;
  border-radius: 0.5rem;
  border: 2px solid var(--BolDH-Accent-1, #32C3A0);
  background: var(--BolDH-Black-Black, #131313);
  transition: all ease-in .2s;
  text-decoration: none;
  color: var(--BolDH-White-White, #F2F2F2);
  font-family: SequelSemiBold;
  font-size: 1.25rem;
  line-height: 150%; /* 1.875rem */
  letter-spacing: 0.05rem;
}

.hero-btn svg {
  transition: all ease-in .2s;
}

.boldh-btn-arrow-cnt {
  height: 1.5rem;
  width: auto;
  transition: all ease-in .2s;
}

.boldh-btn-arrow-cnt svg, .mini-boldh-btn-arrow-cnt svg {
  height: 100%;
  width: auto;
  transition: all ease-in .2s;
}

.mini-btn {
  display: flex;
  width: 10rem;
  padding: 0.5rem 1rem;
  justify-content: space-between;
  align-items: center;
  color: var(--BolDH-White-White, #F2F2F2);
  transition: all ease-in .2s;
  border: 2px solid var(--BolDH-Accent-1, #32C3A0);
}

.mini-boldh-btn-arrow-cnt {
  height: 1.15rem;
  width: auto;
  transition: all ease-in .2s;
}



/* ---------------- NAVBAR ---------------- */
header {
  position: sticky;
  top: 0;
  width: 100%;
  border-bottom: 2px solid var(--BolDH-White-White, #F2F2F2);
  background: var(--BolDH-Black-Black, #131313);
  z-index: 99;
}

nav {
  display: flex;
  padding: 0.5rem 7.5%;
  justify-content: space-between;
  align-items: center;
}

#nav-logo-cnt {
  width: 3.25rem;
  display: flex;
}

#nav-logo-cnt img {
  width: 100%;
  height: auto;
}

nav ul {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  gap: 2rem;
  list-style: none;
}

nav ul li a {
  color: var(--BolDH-Text-Grey, rgba(242, 242, 242, 0.76));
  font-family: SequelSemiBold;
  font-size: 1.25rem;
  line-height: 150%; /* 1.875rem */
  letter-spacing: 0.025rem;
  text-decoration: none;
  position: relative;
}

nav ul li a.active{
  color: var(--BolDH-White-White, #F2F2F2);
}
/* ... */

